2021-06-11  Robert Jenner  <jenner@apple.com>

        [LayoutTests] Delete unused LayoutTests/webaudio resources
        https://bugs.webkit.org/show_bug.cgi?id=226843

        Reviewed by Jonathan Bedard.

        * webaudio/resources/convolution-testing.js: Removed.
        * webaudio/resources/javascriptaudionode-testing.js: Removed.
        * webaudio/resources/note-grain-on-testing.js: Removed.
        * webaudio/resources/scriptprocessornode-testing.js: Removed.

2021-06-11  Robert Jenner  <jenner@apple.com>

        [LayoutTests] Delete unused LayoutTests/tiled-drawing resources
        https://bugs.webkit.org/show_bug.cgi?id=226842

        Reviewed by Jonathan Bedard.

        * tiled-drawing/resources/green.png: Removed.

2021-06-11  Robert Jenner  <jenner@apple.com>

        [LayoutTests] Delete unused LayoutTests/security resources
        https://bugs.webkit.org/show_bug.cgi?id=226839

        Reviewed by Jonathan Bedard.

        * security/resources/worker-isSecureContext-disabled.js: Removed.

2021-06-11  Robert Jenner  <jenner@apple.com>

        N[LayoutTests] Delete unused LayoutTests/media resources
        https://bugs.webkit.org/show_bug.cgi?id=226836

        Reviewed by Jonathan Bedard.

        * media/track/opera/resources/media/sunflower.mp4: Removed.
        * media/track/opera/resources/media/sunflower.webm: Removed.

2021-06-11  Robert Jenner  <jenner@apple.com>

        [LayoutTests] Delete unused LayoutTests/js resources
        https://bugs.webkit.org/show_bug.cgi?id=226796

        Reviewed by Jonathan Bedard.

        * js/dom/modules/resources/module-will-fire-beforeload.js: Removed.
        * js/kde/resources/KNOWN_FAILURES: Removed.
        * js/mozilla/resources/js-test-post-async.js: Removed.
        * js/mozilla/resources/js-test-post-function.js: Removed.
        * js/mozilla/resources/js-test-post-n.js: Removed.

2021-06-11  Robert Jenner  <jenner@apple.com>

        [LayoutTests] Delete unused LayoutTests/css3 resources