@@ -1,5 +1,0 @@
-This page contains a subframe.<br>
-Clicking the link in the subframe navigates the subframe.<br>
-The "should open external URLs" flag on that navigation should be false. Even though it was a link click, it was within a subframe which should never get the flag set to true.<br>
-<iframe src="click-notify-done-in-self.html"></iframe>
- 
