@@ -1,5 +1,14 @@
 2021-06-11  Robert Jenner  <jenner@apple.com>
 
+        [LayoutTests] Delete unused LayoutTests/loader resources
+        https://bugs.webkit.org/show_bug.cgi?id=226835
+
+        Reviewed by Jonathan Bedard.
+
+        * loader/navigation-policy/should-open-external-urls/resources/main-frame-with-subframe-click-targets-subframe.html: Removed.
+
+2021-06-11  Robert Jenner  <jenner@apple.com>
+
         [LayoutTests] Delete unused LayoutTests/webaudio resources
         https://bugs.webkit.org/show_bug.cgi?id=226843
 
